<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bruno.bootstrap.UIActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="40dp"
        android:id="@+id/liner1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ui_name_text"
            android:gravity="right"
            android:paddingRight="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/ui_name_hint"
            android:background="@drawable/border"
            android:textColor="#333"
            android:lines="1"
            android:maxLines="1"
            android:id="@+id/ui_name_edittext"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/liner1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/linear2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ui_pwd_text"
            android:gravity="right"
            android:paddingRight="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/ui_pwd_hint"
            android:background="@drawable/border"
            android:textColor="#333"
            android:lines="1"
            android:maxLines="1"
            android:id="@+id/ui_pwd_edittext"
            android:inputType="textPassword"/>

    </LinearLayout>

    <TextView
        android:layout_below="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goto_login"
        android:text="@string/goto_login"
        android:gravity="center"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/goto_login"
        android:id="@+id/ui_login"/>
</RelativeLayout>
