<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bruno.bootstrap.LoginActivity">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:id="@+id/toolbar"-->
        <!--android:background="?attr/colorPrimary">-->
    <!--</android.support.v7.widget.Toolbar>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentLeft="true"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textAlignment="center"
            android:layout_toLeftOf="@id/back"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="40dp"
        android:id="@+id/liner1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ui_name_text"
            android:gravity="right"
            android:paddingRight="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/ui_name_hint"
            android:background="@drawable/border"
            android:textColor="#333"
            android:lines="1"
            android:maxLines="1"
            android:id="@+id/ui_name_edittext"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/liner1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/linear2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ui_pwd_text"
            android:gravity="right"
            android:paddingRight="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/ui_pwd_hint"
            android:background="@drawable/border"
            android:textColor="#333"
            android:lines="1"
            android:maxLines="1"
            android:id="@+id/ui_pwd_edittext"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear3"
        android:layout_below="@+id/linear2"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ui_rpwd_text"
            android:gravity="right"
            android:paddingRight="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/ui_pwd_hint"
            android:background="@drawable/border"
            android:textColor="#333"
            android:lines="1"
            android:maxLines="1"
            android:id="@+id/ui_rpwd_edittext"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:layout_below="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/signup"/>
</RelativeLayout>
